Aggiunto nuove funzioni
Aggiunto le funzioni nel DB per prendere il numero di Follower di un utente. La funzione per prendere un numero di seguiti dell'utente. Aggiunto la funzione ottenere il profilo di un utente. Ho aggiunto la funzione per ottenere una photo. Aggiustati errori vari.
