# service/api/api-handler.go
@@ -9,11 +9,17 @@ func (rt *_router) Handler() http.Handler {
 	// Register routes
 
 	rt.router.POST("/session", rt.wrap(rt.doLoginHandler))
-	rt.router.GET("/Users", rt.wrap(rt.getUsersQuery))
-	rt.router.PUT("/Users/:id", rt.wrap(rt.PutNickname))
+	// ? User
+	rt.router.GET("/Users", rt.wrap(rt.searchUsers))
 	// TODO - General Check of the routes
+	rt.router.GET("/Users/:id", rt.wrap(rt.getUserProfile))
+	rt.router.PUT("/Users/:id", rt.wrap(rt.PutNickname))
+
+	// ? Stream
 	rt.router.GET("/Users/:id/home", rt.wrap(rt.getMyStream))
-	rt.router.PUT("/Users/:id/Photos/:photo_id/Likes/:like_id", rt.wrap(rt.likePhoto))
+
+	//rt.router.PUT("/Users/:id/Photos/:photo_id/Likes/:like_id", rt.wrap(rt.likePhoto))
+	rt.router.PUT("/Users/:id/Photos/:photo_id/Likes", rt.wrap(rt.likePhoto))
 	rt.router.DELETE("/Users/:id/Photos/:photo_id/Likes/:like_id", rt.wrap(rt.unlikePhoto))
 	rt.router.PUT("/Users/:id/banned_users/:banned_user_id", rt.wrap(rt.putBan))
 	rt.router.DELETE("/Users/:id/banned_users/:banned_user_id", rt.wrap(rt.deleteBan))
